# pr-review-swarm

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
eval/: baseline_agent.py  results.md  run_eval.py  score.py
eval/_archive_final_head/: README.md  results.md
eval/dataset/: flask_1671.yaml  flask_2031.yaml  flask_2570.yaml  flask_3059.yaml  httpx_1197.yaml  httpx_2278.yaml  httpx_2423.yaml  httpx_3139.yaml  httpx_887.yaml  requests_2523.yaml  requests_3366.yaml  requests_3655.yaml  requests_3984.yaml  requests_4718.yaml  requests_5856.yaml
eval/judgments/baseline/: flask_1671.yaml  flask_2031.yaml  flask_2570.yaml  flask_3059.yaml  httpx_1197.yaml  httpx_2278.yaml  httpx_2423.yaml  httpx_3139.yaml  httpx_887.yaml  requests_2523.yaml  requests_3366.yaml  requests_3655.yaml  requests_3984.yaml  requests_4718.yaml  requests_5856.yaml
eval/judgments/full/: flask_1671.yaml  flask_2031.yaml  flask_2570.yaml  flask_3059.yaml  httpx_1197.yaml  httpx_2278.yaml  httpx_2423.yaml  httpx_3139.yaml  httpx_887.yaml  requests_2523.yaml  requests_3366.yaml  (+4 more)
src/: cli.py  diff_parser.py  github_client.py  models.py  orchestrator.py  synthesizer.py  tools.py  trace.py
src/agents/: base.py  correctness.py  security.py  style.py  test_coverage.py
tests/: test_agents.py  test_cli.py  test_dataset.py  test_diff_parser.py  test_dotenv.py  test_eval_runner.py  test_github_client.py  test_more_agents.py  test_orchestrator.py  test_score.py  test_synthesizer.py  test_tool_loop.py  test_trace.py
tests/fixtures/: pr.diff  pr_metadata.json
(+115 files in other folders)
