[project]
name = "pr-review-swarm"
version = "0.1.0"
description = "Multi-agent GitHub PR reviewer"
requires-python = ">=3.12"
dependencies = [
    "anthropic",
    "httpx",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
